# football

./: README.md  pyproject.toml
src/gridiron_insights/ncaa/: fbs.py  fbs_table.txt  fcs.py  models.py  output.json  scoreboard.py  table.txt
